# project2_mishra_alla_nod

./: .gitignore  Makefile  README.md  README.md.backup  final_check.py  final_demo.cast  project_demo.cast  pyproject.toml  test_crud.py  test_decorators.py  test_simple.py
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
