[tool.poetry]
name = "project2_Mishra_nod"
version = "0.1.0"
description = "primitive DB project"
authors = ["mishra-alla <allasr22@yandex.ru>"]
readme = "README.md"
packages = [
 { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prettytable = "^3.16.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"